-
Bug
-
Resolution: Done
-
P5: Not important
-
Qt Creator 4.1.0
-
OSX El Capitan
Qt 5.7
-
9686c85a469c193438fb457bb41f4c0eb3e22188 (qt-creator/qt-creator/master)
Since upgrading to 4.1.0, have started to get the warning "The build directory needs to be at the same level as the source directory."
The structure I use is:
- Shadow
- Toplevel.pro
- Build
- Build 1
- Build 2
Ct Creator seems to now want Build 1 and Build 2 to be at the same level as Toplevel.pro
This used to happen around 2011, but was fixed. The bug seems to have come back since.
- relates to
-
QTCREATORBUG-20834 Warn if project or build directory contains spaces, non-ASCII or special characters
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-16945 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 255014,2 | Qmake: Improve the build dir location warning | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |